fix: scrollbar2

--- a/src/components/Cabinet/Teams/teams.module.css
+++ b/src/components/Cabinet/Teams/teams.module.css
@@ -76,8 +76,8 @@
     flex-direction: column;
     gap: 0.5rem;
     flex-grow: 1;
-    //overflow-y: auto;
-    
+    overflow-y: auto;
+    -ms-overflow-style: none;
     padding: 1rem;
 
     padding: 0.1rem 1rem 5rem 1rem;
